Heavy on loc and iloc - Fictional Filtering

--- a/02_Filtering_&_Sorting/Fictional Army/Exercise.ipynb
+++ b/02_Filtering_&_Sorting/Fictional Army/Exercise.ipynb
@@ -1883,23 +1883,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    523\n",
+       "origin\n",
+       "Arizona    523\n",
        "Name: deaths, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "army[(army['origin']=='Arizona')].iloc[:,2]"
+    "army.loc[['Arizona']].iloc[:,2]"
    ]
   },
   {
